--- a/todo.txt
+++ b/todo.txt
@@ -31,19 +31,25 @@ R RT 10 - Affichage des messages reçus par un autre utilisateur
 P RT 11 - Envoi de messages à un groupe d'utilisateurs
 R RT 12 - Affichage des messages reçus par un groupe d'utilisateurs
 
-RT 15 - Demande de modification de status
+P RT 15 - Demande de modification de status
 
-RT 16 - Envoi de demande d'envoi de fichier à un autre utilisateur
-RT 17 - Envoi de réponse à demande d'envoi de fichier par un autre utilisateur
-RT 18 - Reception d'une demande d'envoi de fichier
-RT 19 - Reception de la réponse à la demande d'envoi de fichier
+P RT 16 - Envoi de demande d'envoi de fichier à un autre utilisateur
+P RT 17 - Envoi de réponse à demande d'envoi de fichier par un autre utilisateur
+R RT 18 - Reception d'une demande d'envoi de fichier
+R RT 19 - Reception de la réponse à la demande d'envoi de fichier
 
-P RT 21 - Demande de création de chatroom
-R RT 22 - Reception à la demande de creation de chatroom
+P RT 21 - Demande d'ajout a un groupe
+R RT 22 - Demande d'abandon d'un groupe
 
 P RT 23 - Envoi de demande de supression d'ami à un autre utilisateur
 
 P RT 24 - Reception de modification de parametre utilisateur
+
+P RT 13 - Demande de liste d'amis en ligne
+R RT 14 - Reception de la liste des amis en ligne
+
+R RT 25 - Demande d'infos
+P RT 26 - Reception d'infos
 ________________________
 
 NORT - Enregistrement des logs de chat
@@ -79,14 +85,18 @@ R RT 17 - Reception de réponse à demande d'envoi de fichier d'une utilisateur po
 P RT 18 - Envoi d'une demande d'envoi de fichier d'un utilisateur 
 P RT 19 - Envoi de la réponse à la demande d'envoi de fichier
 
-R RT 21 - Reception de demande de création de chatroom
-P RT 22 - Envoi de réponse à la demande de creation de chatroom
+R RT 21 - Reception de demande d'ajout a un groupe
+R RT 22 - Reception de demande d'abandon d'un groupe
 
 R RT 23 - Reception de demande de supression d'ami
 
 R RT 24 - Reception de modification de parametre utilisateur
 
+P RT 13 - Reception de demande de liste d'amis en ligne
+R RT 14 - Envoi de la liste des amis en ligne
 
+R RT 25 - Reception de demande d'infos
+P RT 26 - Envoi d'infos
 
 Format RT 2 -> "nick" : str{nickname}, "pwd" : str{password}
 Format RT 3 -> "answer" : int{0/1}
@@ -99,10 +109,11 @@ Format RT 15 -> "status" : str{message}
 Format RT 16 & 18 -> "name" : str{filename}
 Format RT 17 & 19 -> "answer" : int{0/1}
 Format RT 21 -> "name" : str{chatroomname}
-Format RT 22 -> "answer" : int{0/1}
+Format RT 22 -> User : str{User[RoomInfos}
 Format RT 24 -> User : str{UserInfos}
-
-
+Format RT 14 -> User : str{UserInfos}
+Format RT 25 -> "id" : int{userid/roomid}
+Format RT 26 -> User : str{User/Room Infos}
 
 User file infos :
    -> id : userid
